example/cloudformation.yml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  Prefix:
    Type: String
    Default: example
  DBName:
    Type: String
    Default: example
  DBUsername:
    Type: String
    Default: user
  DBPassword:
    Type: String
    Default: password
  KeyPair:
    Description: KeyPair Name
    Type: AWS::EC2::KeyPair::KeyName
    Default: "my-key"

Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      Tags:
        - Key: "Name"
          Value: !Sub "${Prefix}-vpc"
      EnableDnsSupport: true
      EnableDnsHostnames: true
  PublicSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.1.0/24"
      AvailabilityZone: "ap-northeast-1a"
      VpcId: !Ref "VPC"
      Tags:
        - Key: "Name"
          Value: !Sub "${Prefix}-public-subnet"
  PrivateSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.2.0/24"
      AvailabilityZone: "ap-northeast-1c"
      VpcId: !Ref "VPC"
      Tags:
        - Key: "Name"
          Value: !Sub "${Prefix}-private-subnet"
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${Prefix}-internet-gateway"
  InternetGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref "VPC"
      InternetGatewayId: !Ref "InternetGateway"
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref "VPC"
      Tags:
        - Key: "Name"
          Value: !Sub "${Prefix}-public-route-table"
  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref "PublicRouteTable"
      SubnetId: !Ref "PublicSubnet"
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref "PublicRouteTable"
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref "InternetGateway"
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${Prefix}-web-security-group"
      GroupDescription: WebSecurityGroup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: "Name"
          Value: !Sub "${Prefix}-web-security-group"
      VpcId: !Ref VPC
  WebNetworkInterface:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref "PublicSubnet"
      PrivateIpAddress: "10.0.1.10"
  WebInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-034dad9bdb65ec34b
      InstanceType: t2.micro
      KeyName: !Ref "KeyPair"
      SecurityGroupIds:
        - !Ref "WebSecurityGroup"
      Tags:
        - Key: "Name"
          Value: !Sub "${Prefix}-web-server"
      BlockDeviceMappings:
        - DeviceName: "/dev/xvda"
          Ebs:
            VolumeType: "gp2"
            VolumeSize: 8
      SubnetId: !Ref "PublicSubnet"
      UserData:
        Fn::Base64: |-
          #!/bin/bash
          sudo yum install -y go
          sudo yum -y install mysql

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${Prefix}-db-security-group"
      GroupDescription: DBSecurityGroup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: "10.0.1.0/24"
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: "10.0.1.0/24"
      Tags:
        - Key: "Name"
          Value: !Sub "${Prefix}-db-security-group"
      VpcId: !Ref VPC
  DBInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-034dad9bdb65ec34b
      InstanceType: t2.micro
      KeyName: !Ref "KeyPair"
      SecurityGroupIds:
        - !Ref DBSecurityGroup
      Tags:
        - Key: "Name"
          Value: !Sub "${Prefix}-db-server"
      BlockDeviceMappings:
        - DeviceName: "/dev/xvda"
          Ebs:
            VolumeType: "gp2"
            VolumeSize: 8
      SubnetId: !Ref PrivateSubnet
      UserData:
        Fn::Base64: |-
          #!/bin/bash
          sudo yum install -y mysql-server
          sudo service mysqld start
          sudo chkconfig mysqld on
  WebEIP:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref WebInstance
      Tags:
        - Key: Name
          Value: !Sub "${Prefix}-web-eip"
#      NetworkInterfaces:
#        - DeviceIndex: "0"
#          NetworkInterfaceId: !Ref WebNetworkInterface
  NAT:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - EIP
          - AllocationId
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: NatGateway
  EIP:
    DependsOn: InternetGatewayAttachment
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
